versioned_docs/version-5.4/document-extensions/counters/counters-and-other-features.mdx
---
title: "Counters and Other Features"
hide_table_of_contents: true
sidebar_label: Counters and Other Features
sidebar_position: 5
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "python", "php", "nodejs"];


# Counters and Other Features
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* This section describes the relationships between Counters and other RavenDB features:  
   * How Counters are supported by the different features.  
   * How Counters trigger features' execution.  

* In this page:  
  * [Counters and Indexing](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing)  
  * [Counters and Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries)  
  * [Counters and Revisions](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-revisions)  
  * [Counters and Smuggler](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-smuggler)  
  * [Counters and Changes API](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-changes-api)  
  * [Counters and Ongoing Tasks](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) - `Backup`, `External replication`, `ETL`, `Data Subscription`  
  * [Counters and Other Features: summary](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-other-features-summary)  
  * [Including Counters](../../document-extensions/counters/counters-and-other-features.mdx#including-counters)  
  * [Counters Bulk-Insert](../../document-extensions/counters/counters-and-other-features.mdx#counters-bulk-insert)  
</Admonition>


### Counters and Indexing  

Indexing Counters can speed-up finding them and the documents that contain them.  

* **Indexing Counter Values**
    Dynamic indexes (aka auto-indexes) _cannot_ index counter values. To index counter values, 
    create a static index that inherits from `AbstractCountersIndexCreationTask` ([see here](../../document-extensions/counters/indexing.mdx)).

* **Indexing Counter Names**  
    Re-indexing due to Counter-name modification is normally rare enough to pause no performance issues.  
    To index a document's Counters by name, use [CounterNamesFor](../../document-extensions/counters/indexing.mdx#section-1).  
### Counters and Queries  

Create queries **using code**, or send the server **raw queries** for execution.  

* Either way, you can query Counters **by name** but **not by value**.  
  This is because queries are generally [based on indexes](../../start/getting-started.mdx#example-iii---querying), and Counter values are [not indexed](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing).  
* Counter values **can** be [projected](../../indexes/querying/projections.mdx) from query results, as demonstrated in the following examples.  
  This way a client can get Counter values from a query without downloading whole documents.  

* Use [Session.Query](../../client-api/session/querying/how-to-query.mdx#sessionquery) to code queries yourself.  
   * **Returned Counter Value**: **Accumulated**  
     A Counter's value is returned as a single sum, with no specification of the Counter's value on each node.
<TabItem value="counters_region_query" label="counters_region_query">
<CodeBlock language="csharp">
{`using (var session = docStore.OpenSession())
\{
    //Select documents from the "Products" collection, with a Counter named \`ProductLikes\`.  
    //Querying upon Counter values (e.g. using "Where") is not possible.  
    //In this example the documents that contain the Counter are NOT returned, only Counter values.
    var query = session.Query<Product>()
    .Select(product => RavenQuery.Counter(product, "ProductLikes"));

    var queryResults = query.ToList();

    //Show ProductLikes's value, or NULL for documents with no such Counter.  
    foreach (var counterValue in queryResults)
    \{
        Console.WriteLine("ProductLikes: " + counterValue);
    \}
\}
`}
</CodeBlock>
</TabItem>

* Use [RawQuery](../../client-api/session/querying/how-to-query.mdx#sessionadvancedrawquery) to send the server raw RQL expressions for execution.  
   * You can use the `counter` method.  
     **Returned Counter Value**: **Accumulated**

  * You can use the `counterRaw` method.  
     **Returned Counter Value**: **Distributed**  
     A Counter's value is returned as a series of values, each maintained by one of the nodes.  
      * It is not expected of you to use this in your application.  
        Applications normally use the Counter's overall value, and very rarely refer to the value each node gives it.  
      
        
    `counter` and `counterRaw` samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="counter" label="counter">
<CodeBlock language="csharp">
{`//Various RQL expressions sent to the server using counter()
//Returned Counter value is accumulated
var rawquery1 = session.Advanced
    .RawQuery<CounterResult>("from products as p select counter(p, \\"ProductLikes\\")")
    .ToList();

var rawquery2 = session.Advanced
    .RawQuery<CounterResult>("from products select counter(\\"ProductLikes\\") as ProductLikesCount")
    .ToList();

var rawquery3 = session.Advanced
    .RawQuery<CounterResult>("from products where PricePerUnit > 50 select Name, counter(\\"ProductLikes\\")")
    .ToList();
`}
</CodeBlock>
</TabItem>
<TabItem value="counterRaw" label="counterRaw">
<CodeBlock language="csharp">
{`//An RQL expression sent to the server using counterRaw()
//Returned Counter value is distributed
var query = session.Advanced
    .RawQuery<CounterResultRaw>("from users as u select counterRaw(u, \\"downloads\\")")
    .ToList();
`}
</CodeBlock>
</TabItem>
    </Tabs>
### Counters and Revisions  

A [document revision](../../document-extensions/revisions/overview.mdx) stores all the document Counters' 
names and values when the revision was created.  
 
* **Stored Counter Values**: **Accumulated**  
  A revision stores a Counter's value as a single sum, with no specification of the Counter's value on each node.  

* Revisions-creation can be initiated by **Counter-name modification**.  
   * When the Revisions feature is enabled, the creation or deletion of a Counter initiates the creation of a new document revision.  
   * Counter **value** modifications do **not** cause the creation of new revisions.  
### Counters and Smuggler  

[Smuggler](../../client-api/smuggler/what-is-smuggler.mdx) is a DocumentStore property, that can be used 
to [export](../../client-api/smuggler/what-is-smuggler.mdx#databasesmugglerexportoptions) chosen 
database items to an external file or to [import](../../client-api/smuggler/what-is-smuggler.mdx#databasesmugglerimportoptions) 
database items from an existing file into the database.  

* **Transferred Counter Value**: **Distributed**  
  Smuggler transfers the entire series of values that the different nodes maintain for a Counter.  
* To make Smuggler handle Counters, include `DatabaseItemType.Counters` in `OperateOnTypes`'s list of entities to import or export.  
<TabItem value="smuggler_options" label="smuggler_options">
<CodeBlock language="csharp">
{`OperateOnTypes = DatabaseItemType.Indexes
                 | DatabaseItemType.Documents
                 | DatabaseItemType.CounterGroups
`}
</CodeBlock>
</TabItem>
### Counters and Changes API

[Changes API](../../client-api/changes/what-is-changes-api.mdx#changes-api) is a Push service, that can inform you of various changes on the Server, including [changes in Counter values](../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#changes-api--how-to-subscribe-to-counter-changes).  
You can target all Counters, or specify the ones you wish to follow.  

* **Pushed Counter Value**: **Accumulated**  
  `Changes API` methods return a Counter's value as a single sum, without specifying its value on each node.  
* The service is initiated by **Counter Value Modification**.  
### Counters and Ongoing Tasks:

Each [ongoing task](../../studio/database/tasks/ongoing-tasks/general-info.mdx) relates to Counters in its own way.  

* **Counters** and the **Backup task**  
    There are two [backup](../../studio/database/tasks/backup-task.mdx) types: **logical-backup** and **snapshot**.  
    Both types store and restore **all** data, including Counters.  
    Both types operate as an ongoing backup routine, with a pre-set time schedule.  
    * Logical Backup:  
      **Backed-up Counter values**: **Distributed**  
      A logical backup is a higher-level implementation of [Smuggler](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-smuggler).  
      As with Smuggler, Counters are backed-up and restored including their values on all nodes.  
    * Snapshot:  
      A snapshot stores all data and settings as a single binary image.
      All components, including Counters, are restored to the exact same state they've been at during backup.  

* **Counters** and the **External Replication task**  
    The ongoing [external replication](../../studio/database/tasks/ongoing-tasks/external-replication-task.mdx) task replicates all data, including Counters.  
    * **Replicated Counter Value**: **Distributed**  
        Counters are replicated along with their values on all nodes.  
    * Replication can be initiated by both **Counter-name update** _and_ **Counter-value modification**.  

* **Counters** and the **ETL task**  
    [ETL](../../server/ongoing-tasks/etl/basics.mdx) is used to export data from RavenDB to an external (either Raven or SQL) database.  
    * [SQL ETL](../../server/ongoing-tasks/etl/sql.mdx) is **not supported**.  
      Counters cannot be exported to an SQL database over SQL ETL.  
    * [RavenDB ETL](../../server/ongoing-tasks/etl/raven.mdx) **is supported**.  
      Counters [are](../../server/ongoing-tasks/etl/raven.mdx#counters) exported over RavenDB ETL.  
      * Export can be initiated by both **Counter-name update** _and_ **Counter-value modification**.  
      * **Exported Counter Value**: **Distributed**  
        Counters are exported along with their values on all nodes.  
      * Counters can be [exported using a script](../../server/ongoing-tasks/etl/raven.mdx#adding-counter-explicitly-in-a-script).  
        **Default behavior**: When an ETL script is not provided, Counters are exported.  
      
* **Counters** and the **[Data Subscriptions](../../client-api/data-subscriptions/what-are-data-subscriptions.mdx#data-subscriptions) task**  
    Data Subscriptions can be initiated by document changes, including those caused by **Counter Name updates**.  
    Documents will **not** be delivered in reaction to Counter Value modification.  


<Admonition type="note" title="Note">
### Counters and Other Features: Summary

Use this table to find if and how various RavenDB features are triggered by Counters, 
and how the various features handle Counter values.  

* In the **Triggered By** column:  
    * _Document Change_ - Feature is triggered by a Counter Name update.  
    * _Countrer Value Modification_ - Feature is triggered by a Counter Value modification.  
    * _Time Schedule_ - Feature is invoked by a pre-set time routine.  
    * _No Trigger_ - Feature is executed manually, through the Studio or by a Client.  
* In the **Counter Value** column:  
    * _Accumulated_ - Counter Value is handled as a single accumulated sum.  
    * _Distributed_ - Counter Value is handled as a series of values maintained by cluster nodes.  

| **Feature** | **Triggered by** | **Counter Value** |
|-------------|:-------------|:-------------|
| [Indexing](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing) | _Document Change_ | doesn't handle values |
| [LINQ Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries) | _No trigger_ | _Accumulated_ |
| [Raw Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries) | _No trigger_ | `counter()` - _Accumulated_ <br/> `counterRaw()` - _Distributed_ |
| [Smuggler](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-smuggler) | _No trigger_ | _Distributed_ |
| [Backup Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Time Schedule_ | _Distributed_ |
| [RavenDB ETL Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_, <br/> _Countrer Value Modification_ | _Distributed_ |
| [External Replication task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_, <br/> _Countrer Value Modification_ | _Distributed_ |
| [Data Subscriptions Update Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_ | |
| [Changes API](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-changes-api) | _Countrer Value Modification_ | _Accumulated_ |
| [Revision creation](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-revisions) | _Document Change_ | _Accumulated_ |

</Admonition>
### Including Counters  
You can [include](../../client-api/how-to/handle-document-relationships.mdx#includes) Counters while loading a document.  
An included Counter is retrieved in the same request as its owner-document and is held by the session, 
so it can be immediately retrieved when needed with no additional remote calls.


* **Including Counters when using [Session.Load](../../client-api/session/loading-entities.mdx#session--loading-entities)**:  
    * Include a single Counter using `IncludeCounter`.  
    * Include multiple Counters using `IncludeCounters`.  

    `IncludeCounter` and `IncludeCounters` usage samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="IncludeCounter" label="IncludeCounter">
<CodeBlock language="csharp">
{`//include single Counters
var productPage = session.Load<Product>("products/1-C", includeBuilder =>
        includeBuilder.IncludeCounter("ProductLikes")
                      .IncludeCounter("ProductDislikes")
                      .IncludeCounter("ProductDownloads"));
`}
</CodeBlock>
</TabItem>
<TabItem value="IncludeCounters" label="IncludeCounters">
<CodeBlock language="csharp">
{`//include multiple Counters
//note that you can combine the inclusion of Counters and documents.
var productPage = session.Load<Product>("orders/1-A", includeBuilder =>
        includeBuilder.IncludeDocuments("products/1-C")
                      .IncludeCounters(new[] { "ProductLikes", "ProductDislikes" }));
`}
</CodeBlock>
</TabItem>
    </Tabs>

* **Including Counters when using [Session.Query](../../client-api/session/querying/how-to-query.mdx#sessionquery)**:  
    * Include a single Counter using `IncludeCounter`.  
    * Include multiple Counters using `IncludeCounters`.  

    `IncludeCounter` and `IncludeCounters` usage samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="IncludeCounter" label="IncludeCounter">
<CodeBlock language="csharp">
{`//include a single Counter
var query = session.Query<Product>()
        .Include(includeBuilder =>
         includeBuilder.IncludeCounter("ProductLikes"));
`}
</CodeBlock>
</TabItem>
<TabItem value="IncludeCounters" label="IncludeCounters">
<CodeBlock language="csharp">
{`//include multiple Counters
var query = session.Query<Product>()
        .Include(includeBuilder =>
        includeBuilder.IncludeCounters(new[] { "ProductLikes", "ProductDownloads" }));
`}
</CodeBlock>
</TabItem>
    </Tabs>
### Counters Bulk-Insert  
`store.BulkInsert` is RavenDB's high-performance data insertion operation.  
Use its `CountersFor` interface's `Increment` method to add or update counters with great speed.  

* Syntax  

   * `CountersFor`
<TabItem value="CountersFor-definition" label="CountersFor-definition">
<CodeBlock language="csharp">
{`public CountersBulkInsert CountersFor(string id)
`}
</CodeBlock>
</TabItem>

        | Parameters | Type | Description |
        |:-------------|:-------------|:-------------|
        | `id` | `string` | Document ID |

   *   `Increment`
<TabItem value="Increment-definition" label="Increment-definition">
<CodeBlock language="csharp">
{`public void Increment(string name, long delta = 1L)
`}
</CodeBlock>
</TabItem>

           | Parameters | Type | Description |
           |:-------------|:-------------|:-------------|
           | `name` | `string` | Counter Name |
           | `delta` | `long` | Default: 1L |

* Usage Flow  

   * Create a `store.BulkInsert` instance.  
   * Pass the instance's `CountersFor` interface, the document ID  
   * Call `Increment` as many times as you like. Pass it -  
     The Counter Name and Value (delta to be added).

* Usage Sample  
  In this sample, we attach a counter to all User documents.
<TabItem value="bulk-insert-counters" label="bulk-insert-counters">
<CodeBlock language="csharp">
{`// Choose user profiles to add counters to
using (var session = store.OpenSession())
\{
    IRavenQueryable<User> query = session.Query<User>()
        .Where(u => u.Age < 30);

    result = query.ToList();
\}

using (var bulkInsert = store.BulkInsert())
\{
    for (var user = 0; user < result.Count; user++)
    \{
        string userId = result[user].Id;

        // Choose document
        var countersFor = bulkInsert.CountersFor(userId);

        // Add or Increment a counter
        await bulkInsert.CountersFor(userId).IncrementAsync("downloaded", 100);
    \}
\}
`}
</CodeBlock>
</TabItem>  





</LanguageContent>
<LanguageContent language="java">

<Admonition type="note" title="Note">

* This section describes the relationships between Counters and other RavenDB features:  
   * How Counters are supported by the different features.  
   * How Counters trigger features' execution.  

* In this page:  
  * [Counters and Indexing](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing)  
  * [Counters and Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries)  
  * [Counters and Revisions](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-revisions)  
  * [Counters and Smuggler](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-smuggler)  
  * [Counters and Changes API](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-changes-api)  
  * [Counters and Ongoing Tasks](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) - `Backup`, `External replication`, `ETL`, `Data Subscription`  
  * [Counters and Other Features: summary](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-other-features-summary)  
  * [Including Counters](../../document-extensions/counters/counters-and-other-features.mdx#including-counters)  
  * [Counters Bulk-Insert](../../document-extensions/counters/counters-and-other-features.mdx#counters-bulk-insert)  
</Admonition>


### Counters and Indexing  

Indexing Counters can speed-up finding them and the documents that contain them.  

* **Indexing Counter Values**
    Dynamic indexes (aka auto-indexes) _cannot_ index counter values. To index counter values, 
    create a static index that inherits from `AbstractCountersIndexCreationTask`.  

* **Indexing Counter Names**  
    Re-indexing due to Counter-name modification is normally rare enough to pause no performance issues.  
    To index a document's Counters by name, use `counterNamesFor`.  
### Counters and Queries  

Create queries **using code**, or send the server **raw queries** for execution.  

* Either way, you can query Counters **by name** but **not by value**.  
  This is because queries are generally [based on indexes](../../start/getting-started.mdx#example-iii---querying), and Counter values are [not indexed](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing).  
* Counter values **can** be projected from query results, as demonstrated in the following examples.  
  This way a client can get Counter values from a query without downloading whole documents.  

* Use `Session.Query` to code queries yourself.  
   * **Returned Counter Value**: **Accumulated**  
     A Counter's value is returned as a single sum, with no specification of the Counter's value on each node.
<TabItem value="counters_region_query" label="counters_region_query">
<CodeBlock language="csharp">
{`using (var session = docStore.OpenSession())
\{
    //Select documents from the "Products" collection, with a Counter named \`ProductLikes\`.  
    //Querying upon Counter values (e.g. using "Where") is not possible.  
    //In this example the documents that contain the Counter are NOT returned, only Counter values.
    var query = session.Query<Product>()
    .Select(product => RavenQuery.Counter(product, "ProductLikes"));

    var queryResults = query.ToList();

    //Show ProductLikes's value, or NULL for documents with no such Counter.  
    foreach (var counterValue in queryResults)
    \{
        Console.WriteLine("ProductLikes: " + counterValue);
    \}
\}
`}
</CodeBlock>
</TabItem>

* Use `rawQuery` to send the server raw RQL expressions for execution.  
   * You can use the `counter` method.  
     **Returned Counter Value**: **Accumulated**

  * You can use the `counterRaw` method.  
     **Returned Counter Value**: **Distributed**  
     A Counter's value is returned as a series of values, each maintained by one of the nodes.  
      * It is not expected of you to use this in your application.  
        Applications normally use the Counter's overall value, and very rarely refer to the value each node gives it.  
      
        
    `counter` and `counterRaw` samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="counter" label="counter">
<CodeBlock language="java">
{`//Various RQL expressions sent to the server using counter()
//Returned Counter value is accumulated
List<CounterResult> rawQuery1 = session
    .advanced()
    .rawQuery(CounterResult.class, "from products as p select counter(p, \\"productLikes\\")")
    .toList();

List<CounterResult> rawQuery2 = session.advanced().rawQuery(CounterResult.class,
    "from products select counter(\\"productLikes\\") as productLikesCount")
    .toList();

List<CounterResult> rawQuery3 = session.advanced()
    .rawQuery(CounterResult.class,
        "from products where PricePerUnit > 50 select Name, counter(\\"productLikes\\")")
    .toList();
`}
</CodeBlock>
</TabItem>
<TabItem value="counterRaw" label="counterRaw">
<CodeBlock language="java">
{`//An RQL expression sent to the server using counterRaw()
//Returned Counter value is distributed
List<CounterResultRaw> query = session
    .advanced().rawQuery(CounterResultRaw.class,
        "from users as u select counterRaw(u, \\"downloads\\")")
    .toList();
`}
</CodeBlock>
</TabItem>
    </Tabs>
### Counters and Revisions  

A [document revision](../../document-extensions/revisions/overview.mdx) stores all the document Counters' 
names and values when the revision was created.  
 
* **Stored Counter Values**: **Accumulated**  
  A revision stores a Counter's value as a single sum, with no specification of the Counter's value on each node.  

* Revisions-creation can be initiated by **Counter-name modification**.  
   * When the Revisions feature is enabled, the creation or deletion of a Counter initiates the creation of a new document revision.  
   * Counter **value** modifications do **not** cause the creation of new revisions.  
### Counters and Smuggler  

`Smuggler` is a DocumentStore property, that can be used 
to **export** chosen database items to an external file or to 
**import** database items from an existing file into the database.  

* **Transferred Counter Value**: **Distributed**  
  Smuggler transfers the entire series of values that the different nodes maintain for a Counter.  
* To make Smuggler handle Counters, include `DatabaseItemType.COUNTERS` in `OperateOnTypes`'s list of entities to import or export.  
<TabItem value="smuggler_options" label="smuggler_options">
<CodeBlock language="java">
{`exportOptions.setOperateOnTypes(EnumSet.of(
    DatabaseItemType.INDEXES,
    DatabaseItemType.DOCUMENTS,
    DatabaseItemType.COUNTERS));
`}
</CodeBlock>
</TabItem>
### Counters and Changes API

[Changes API](../../client-api/changes/what-is-changes-api.mdx#changes-api) is a Push service, that can inform you of various changes on the Server, including [changes in Counter values](../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#changes-api--how-to-subscribe-to-counter-changes).  
You can target all Counters, or specify the ones you wish to follow.  

* **Pushed Counter Value**: **Accumulated**  
  `Changes API` methods return a Counter's value as a single sum, without specifying its value on each node.  
* The service is initiated by **Counter Value Modification**.  
### Counters and Ongoing Tasks:

Each [ongoing task](../../studio/database/tasks/ongoing-tasks/general-info.mdx) relates to Counters in its own way.  

* **Counters** and the **Backup task**  
    There are two backup types: **logical-backup** and **snapshot**.  
    Both types store and restore **all** data, including Counters.  
    Both types operate as an ongoing backup routine, with a pre-set time schedule.  
    * Logical Backup:  
      **Backed-up Counter values**: **Distributed**  
      A logical backup is a higher-level implementation of [Smuggler](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-smuggler).  
      As with Smuggler, Counters are backed-up and restored including their values on all nodes.  
    * Snapshot:  
      A snapshot stores all data and settings as a single binary image.
      All components, including Counters, are restored to the exact same state they've been at during backup.  

* **Counters** and the **External Replication task**  
    The ongoing [external replication](../../studio/database/tasks/ongoing-tasks/external-replication-task.mdx) task replicates all data, including Counters.  
    * **Replicated Counter Value**: **Distributed**  
        Counters are replicated along with their values on all nodes.  
    * Replication can be initiated by both **Counter-name update** _and_ **Counter-value modification**.  

* **Counters** and the **ETL task**  
    [ETL](../../server/ongoing-tasks/etl/basics.mdx) is used to export data from RavenDB to an external (either Raven or SQL) database.  
    * [SQL ETL](../../server/ongoing-tasks/etl/sql.mdx) is **not supported**.  
      Counters cannot be exported to an SQL database over SQL ETL.  
    * [RavenDB ETL](../../server/ongoing-tasks/etl/raven.mdx) **is supported**.  
      Counters [are](../../server/ongoing-tasks/etl/raven.mdx#counters) exported over RavenDB ETL.  
      * Export can be initiated by both **Counter-name update** _and_ **Counter-value modification**.  
      * **Exported Counter Value**: **Distributed**  
        Counters are exported along with their values on all nodes.  
      * Counters can be [exported using a script](../../server/ongoing-tasks/etl/raven.mdx#adding-counter-explicitly-in-a-script).  
        **Default behavior**: When an ETL script is not provided, Counters are exported.  
      
* **Counters** and the **[Data Subscriptions](../../client-api/data-subscriptions/what-are-data-subscriptions.mdx#data-subscriptions) task**  
    Data Subscriptions can be initiated by document changes, including those caused by **Counter Name updates**.  
    Documents will **not** be delivered in reaction to Counter Value modification.  


<Admonition type="note" title="Note">
### Counters and Other Features: Summary

Use this table to find if and how various RavenDB features are triggered by Counters, 
and how the various features handle Counter values.  

* In the **Triggered By** column:  
    * _Document Change_ - Feature is triggered by a Counter Name update.  
    * _Countrer Value Modification_ - Feature is triggered by a Counter Value modification.  
    * _Time Schedule_ - Feature is invoked by a pre-set time routine.  
    * _No Trigger_ - Feature is executed manually, through the Studio or by a Client.  
* In the **Counter Value** column:  
    * _Accumulated_ - Counter Value is handled as a single accumulated sum.  
    * _Distributed_ - Counter Value is handled as a series of values maintained by cluster nodes.  

| **Feature** | **Triggered by** | **Counter Value** |
|-------------|:-------------|:-------------|
| [Indexing](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing) | _Document Change_ | doesn't handle values |
| [Raw Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries) | _No trigger_ | `counter()` - _Accumulated_ <br/> `counterRaw()` - _Distributed_ |
| [Smuggler](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-smuggler) | _No trigger_ | _Distributed_ |
| [Backup Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Time Schedule_ | _Distributed_ |
| [RavenDB ETL Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_, <br/> _Countrer Value Modification_ | _Distributed_ |
| [External Replication task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_, <br/> _Countrer Value Modification_ | _Distributed_ |
| [Data Subscriptions Update Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_ | |
| [Changes API](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-changes-api) | _Countrer Value Modification_ | _Accumulated_ |
| [Revision creation](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-revisions) | _Document Change_ | _Accumulated_ |

</Admonition>
### Including Counters  
You can `include` Counters while loading a document.  
An included Counter is retrieved in the same request as its owner-document and is 
held by the session, so it can be immediately retrieved when needed with no additional 
remote calls.

* **Including Counters when using `Session.load`**:  
    * Include a single Counter using `includeCounter`.  
    * Include multiple Counters using `includeCounters`.  

    `includeCounter` and `includeCounters` usage samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="IncludeCounter" label="IncludeCounter">
<CodeBlock language="java">
{`//include single Counters
Product productPage = session
    .load(Product.class, "products/1-C", includeBuilder -> {
        includeBuilder.includeCounter("productLikes")
            .includeCounter("productDislikes")
            .includeCounter("productDownloads");
    });
`}
</CodeBlock>
</TabItem>
<TabItem value="IncludeCounters" label="IncludeCounters">
<CodeBlock language="java">
{`//include multiple Counters
//note that you can combine the inclusion of Counters and documents.

Product productPage = session.load(Product.class, "orders/1-A", includeBuilder -> {
    includeBuilder.includeDocuments("products/1-C")
        .includeCounters(new String[]{"productLikes", "productDislikes"});
});
`}
</CodeBlock>
</TabItem>
    </Tabs>

* **Including Counters when using `Session.query`**:  
    * Include a single Counter using `includeCounter`.  
    * Include multiple Counters using `includeCounters`.  

    `includeCounter` and `includeCounters` usage samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="IncludeCounter" label="IncludeCounter">
<CodeBlock language="java">
{`//include a single Counter
IDocumentQuery<Product> query = session.query(Product.class)
    .include(includeBuilder -> {
        includeBuilder.includeCounter("productLikes");
    });
`}
</CodeBlock>
</TabItem>
<TabItem value="IncludeCounters" label="IncludeCounters">
<CodeBlock language="java">
{`//include multiple Counters
IDocumentQuery<Product> query = session.query(Product.class)
    .include(includeBuilder -> {
        includeBuilder.includeCounters(new String[]{"productLikes", "productDownloads"});
    });
`}
</CodeBlock>
</TabItem>
    </Tabs>
### Counters Bulk-Insert  
`store.bulkInsert` is RavenDB's high-performance data insertion operation.  
Use its `countersFor` interface's `increment` method to add or update counters with great speed.  

* Syntax  

   * `countersFor`
<TabItem value="CountersFor-definition" label="CountersFor-definition">
<CodeBlock language="java">
{`public CountersBulkInsert countersFor(String id);
`}
</CodeBlock>
</TabItem>

        | Parameters | Type | Description |
        |:-------------|:-------------|:-------------|
        | `id` | `String` | Document ID |

   *   `increment`
<TabItem value="Increment-definition" label="Increment-definition">
<CodeBlock language="java">
{`void increment(String counterName);

void increment(String id, String name, long delta);
`}
</CodeBlock>
</TabItem>

           | Parameters | Type | Description |
           |:-------------|:-------------|:-------------|
           | `name` | `String` | Counter Name |
           | `id` | `String` | Document ID |
           | `delta` | `long` | Default: 1L |

* Usage Flow  

   * Create a `store.bulkInsert` instance.  
   * Pass the instance's `countersFor` interface, the document ID  
   * Call `increment` as many times as you like. Pass it -  
     The Counter Name and Value (delta to be added).

* Usage Sample  
  In this sample, we attach a counter to all User documents.
<TabItem value="bulk-insert-counters" label="bulk-insert-counters">
<CodeBlock language="java">
{`try (IDocumentSession session = docStore.openSession()) \{
    IDocumentQuery<User> query = session.query(User.class)
        .whereLessThan("age", 30);

    result = query.toList();
\}

try (BulkInsertOperation bulkInsert = docStore.bulkInsert()) \{
    for (User user : result) \{
        String userId = user.getId();
        CountersBulkInsert countersFor = bulkInsert.countersFor(userId);
        bulkInsert.countersFor(userId).increment("downloaded", 100);
    \}
\}
`}
</CodeBlock>
</TabItem>  





</LanguageContent>
<LanguageContent language="python">

<Admonition type="note" title="Note">

* This section describes the relationships between Counters and other RavenDB features:  
   * How Counters are supported by the different features.  
   * How Counters trigger features' execution.  

* In this page:  
  * [Counters and Indexing](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing)  
  * [Counters and Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries)  
  * [Counters and Revisions](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-revisions)  
  * [Counters and Changes API](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-changes-api)  
  * [Counters and Ongoing Tasks](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) - `Backup`, `External replication`, `ETL`, `Data Subscription`  
  * [Counters and Other Features: summary](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-other-features-summary)  
  * [Including Counters](../../document-extensions/counters/counters-and-other-features.mdx#including-counters)  
  * [Counters Bulk-Insert](../../document-extensions/counters/counters-and-other-features.mdx#counters-bulk-insert)  
</Admonition>


### Counters and Indexing  

Indexing Counters can speed-up finding them and the documents that contain them.  

* **Indexing Counter Values**
    Dynamic indexes (aka auto-indexes) _cannot_ index counter values. To index counter values, 
    create a static index that inherits from `AbstractCountersIndexCreationTask` ([see here](../../document-extensions/counters/indexing.mdx)).

* **Indexing Counter Names**  
    Re-indexing due to Counter-name modification is normally rare enough to pause no performance issues.  
    To index a document's Counters by name, use [CounterNamesFor](../../document-extensions/counters/indexing.mdx#section-1).  
### Counters and Queries  

Create queries **using code**, or send the server **raw queries** for execution.  

* Either way, you can query Counters **by name** but **not by value**.  
  This is because queries are generally [based on indexes](../../start/getting-started.mdx#example-iii---querying), and Counter values are [not indexed](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing).  
* Counter values **can** be [projected](../../indexes/querying/projections.mdx) from query results, as demonstrated in the following examples.  
  This way a client can get Counter values from a query without downloading whole documents.  

* Use [session.query](../../client-api/session/querying/how-to-query.mdx#sessionquery) to code queries yourself.  
   * **Returned Counter Value**: **Accumulated**  
     A Counter's value is returned as a single sum, with no specification of the Counter's value on each node.
<TabItem value="counters_region_query" label="counters_region_query">
<CodeBlock language="python">
{`_include_single_Counter
            # include a single Counter
            query = session.query(object_type=Product).include(lambda builder: builder.include_counter("ProductLikes"))
`}
</CodeBlock>
</TabItem>

* Use [RawQuery](../../client-api/session/querying/how-to-query.mdx#sessionadvancedrawquery) to send the server raw RQL expressions for execution.  
   * You can use the `counter` method.  
     **Returned Counter Value**: **Accumulated**

  * You can use the `counterRaw` method.  
     **Returned Counter Value**: **Distributed**  
     A Counter's value is returned as a series of values, each maintained by one of the nodes.  
      * It is not expected of you to use this in your application.  
        Applications normally use the Counter's overall value, and very rarely refer to the value each node gives it.  
      
        
    `counter` and `counterRaw` samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="counter" label="counter">
<CodeBlock language="python">
{`# Various RQL expressions sent to the server using counter()
# Returned Counter value is accumulated
rawquery1 = list(session.advanced.raw_query("from products as p select counter(p, 'ProductLikes')"))

rawquery2 = list(
    session.advanced.raw_query("from products select counter('ProductLikes') as ProductLikesCount")
)

rawquery3 = list(
    session.advanced.raw_query("from products where PricePerUnit > 50 select Name, counter('ProductLikes')")
)
`}
</CodeBlock>
</TabItem>
<TabItem value="counterRaw" label="counterRaw">
<CodeBlock language="python">
{`# An RQL expression sent to the server using counterRaw()
# Returned Counter value is distributed
query = list(session.advanced.raw_query("from users as u select counterRaw(u, 'downloads')"))
`}
</CodeBlock>
</TabItem>
    </Tabs>
### Counters and Revisions  

A [document revision](../../document-extensions/revisions/overview.mdx) stores all the document Counters' 
names and values when the revision was created.  
 
* **Stored Counter Values**: **Accumulated**  
  A revision stores a Counter's value as a single sum, with no specification of the Counter's value on each node.  

* Revisions-creation can be initiated by **Counter-name modification**.  
   * When the Revisions feature is enabled, the creation or deletion of a Counter initiates the creation of a new document revision.  
   * Counter **value** modifications do **not** cause the creation of new revisions.  
### Counters and Changes API

[Changes API](../../client-api/changes/what-is-changes-api.mdx#changes-api) is a Push service, that can inform you of various changes on the Server, including [changes in Counter values](../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#changes-api--how-to-subscribe-to-counter-changes).  
You can target all Counters, or specify the ones you wish to follow.  

* **Pushed Counter Value**: **Accumulated**  
  `Changes API` methods return a Counter's value as a single sum, without specifying its value on each node.  
* The service is initiated by **Counter Value Modification**.  
### Counters and Ongoing Tasks:

Each [ongoing task](../../studio/database/tasks/ongoing-tasks/general-info.mdx) relates to Counters in its own way.  

* **Counters** and the **Backup task**  
    There are two [backup](../../studio/database/tasks/backup-task.mdx) types: **logical-backup** and **snapshot**.  
    Both types store and restore **all** data, including Counters.  
    Both types operate as an ongoing backup routine, with a pre-set time schedule.  
    * Logical Backup:  
      **Backed-up Counter values**: **Distributed**  
      A logical backup is a higher-level implementation of [Smuggler](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-smuggler).  
      As with Smuggler, Counters are backed-up and restored including their values on all nodes.  
    * Snapshot:  
      A snapshot stores all data and settings as a single binary image.
      All components, including Counters, are restored to the exact same state they've been at during backup.  

* **Counters** and the **External Replication task**  
    The ongoing [external replication](../../studio/database/tasks/ongoing-tasks/external-replication-task.mdx) task replicates all data, including Counters.  
    * **Replicated Counter Value**: **Distributed**  
        Counters are replicated along with their values on all nodes.  
    * Replication can be initiated by both **Counter-name update** _and_ **Counter-value modification**.  

* **Counters** and the **ETL task**  
    [ETL](../../server/ongoing-tasks/etl/basics.mdx) is used to export data from RavenDB to an external (either Raven or SQL) database.  
    * [SQL ETL](../../server/ongoing-tasks/etl/sql.mdx) is **not supported**.  
      Counters cannot be exported to an SQL database over SQL ETL.  
    * [RavenDB ETL](../../server/ongoing-tasks/etl/raven.mdx) **is supported**.  
      Counters [are](../../server/ongoing-tasks/etl/raven.mdx#counters) exported over RavenDB ETL.  
      * Export can be initiated by both **Counter-name update** _and_ **Counter-value modification**.  
      * **Exported Counter Value**: **Distributed**  
        Counters are exported along with their values on all nodes.  
      * Counters can be [exported using a script](../../server/ongoing-tasks/etl/raven.mdx#adding-counter-explicitly-in-a-script).  
        **Default behavior**: When an ETL script is not provided, Counters are exported.  
      
* **Counters** and the **[Data Subscriptions](../../client-api/data-subscriptions/what-are-data-subscriptions.mdx#data-subscriptions) task**  
    Data Subscriptions can be initiated by document changes, including those caused by **Counter Name updates**.  
    Documents will **not** be delivered in reaction to Counter Value modification.  


<Admonition type="note" title="Note">
### Counters and Other Features: Summary

Use this table to find if and how various RavenDB features are triggered by Counters, 
and how the various features handle Counter values.  

* In the **Triggered By** column:  
    * _Document Change_ - Feature is triggered by a Counter Name update.  
    * _Countrer Value Modification_ - Feature is triggered by a Counter Value modification.  
    * _Time Schedule_ - Feature is invoked by a pre-set time routine.  
    * _No Trigger_ - Feature is executed manually, through the Studio or by a Client.  
* In the **Counter Value** column:  
    * _Accumulated_ - Counter Value is handled as a single accumulated sum.  
    * _Distributed_ - Counter Value is handled as a series of values maintained by cluster nodes.  

| **Feature** | **Triggered by** | **Counter Value** |
|-------------|:-------------|:-------------|
| [Indexing](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing) | _Document Change_ | doesn't handle values |
| [LINQ Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries) | _No trigger_ | _Accumulated_ |
| [Raw Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries) | _No trigger_ | `counter()` - _Accumulated_ <br/> `counterRaw()` - _Distributed_ |
| [Smuggler](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-smuggler) | _No trigger_ | _Distributed_ |
| [Backup Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Time Schedule_ | _Distributed_ |
| [RavenDB ETL Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_, <br/> _Countrer Value Modification_ | _Distributed_ |
| [External Replication task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_, <br/> _Countrer Value Modification_ | _Distributed_ |
| [Data Subscriptions Update Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_ | |
| [Changes API](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-changes-api) | _Countrer Value Modification_ | _Accumulated_ |
| [Revision creation](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-revisions) | _Document Change_ | _Accumulated_ |

</Admonition>
### Including Counters  
You can [include](../../client-api/how-to/handle-document-relationships.mdx#includes) Counters while loading a document.  
An included Counter is retrieved in the same request as its owner-document and is held by the session, 
so it can be immediately retrieved when needed with no additional remote calls.


* **Including Counters when using [session.load](../../client-api/session/loading-entities.mdx#session--loading-entities)**:  
    * Include a single Counter using `include_counter`  
    * Include multiple Counters using `include_counters`  

    `include_counter` and `include_counters` usage samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="IncludeCounter" label="IncludeCounter">
<CodeBlock language="python">
{`# include single Counters
product_page = session.load(
    "products/1-C",
    include_builder=lambda builder: builder.include_counter("ProductLikes")
    .include_counter("ProductDislikes")
    .include_counter("ProductDownloads"),
)
`}
</CodeBlock>
</TabItem>
<TabItem value="IncludeCounters" label="IncludeCounters">
<CodeBlock language="python">
{`# include multiple Counters
# note that you can combine the inclusion of Counters and documents.
product_page = session.load(
    "orders/1-A",
    include_builder=lambda builder: builder.include_documents("products/1-C").include_counters(
        ["ProductLikes", "ProductDislikes"]
    ),
)
`}
</CodeBlock>
</TabItem>
    </Tabs>

* **Including Counters when using [Session.Query](../../client-api/session/querying/how-to-query.mdx#session--querying--how-to-query)**:  
    * Include a single Counter using `include_counter`.  
    * Include multiple Counters using `include_counters`.  

    `include_counter` and `include_counters` usage samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="IncludeCounter" label="IncludeCounter">
<CodeBlock language="python">
{`# include a single Counter
query = session.query(object_type=Product).include(lambda builder: builder.include_counter("ProductLikes"))
`}
</CodeBlock>
</TabItem>
<TabItem value="IncludeCounters" label="IncludeCounters">
<CodeBlock language="python">
{`# include multiple Counters
query = session.query("Products").include(
    lambda builder: builder.include_counters(["ProductLikes", "ProductDownloads"])
)
`}
</CodeBlock>
</TabItem>
    </Tabs>
### Counters Bulk-Insert  
`store.bulk_insert` is RavenDB's high-performance data insertion operation.  
Use its `counters_for` interface's `increment` method to add or update counters with great speed.  

* Syntax  

   * `counters_for`
<TabItem value="CountersFor-definition" label="CountersFor-definition">
<CodeBlock language="python">
{`def counters_for(self, id_: str) -> CountersBulkInsert:
    ...
`}
</CodeBlock>
</TabItem>

       | Parameters | Type | Description |
       |:-------------|:-------------|:-------------|
       | **id** | `str` | Document ID |

   * `Increment`
<TabItem value="Increment-definition" label="Increment-definition">
<CodeBlock language="python">
{`def increment(self, name: str, delta: int = 1) -> None: ...
`}
</CodeBlock>
</TabItem>

       | Parameters | Type | Description |
       |:-------------|:-------------|:-------------|
       | **name** | `str` | Counter Name |
       | **delta** | `int` | Default: 1L |

* Usage Flow  

   * Create a `store.bulk_insert` instance.  
   * Pass the instance's `counters_for` interface, the document ID  
   * Call `increment` as many times as you like. Pass it -  
     The Counter Name and Value (delta to be added).

* Usage Sample  
  In this sample, we attach a counter to all User documents.
<TabItem value="bulk-insert-counters" label="bulk-insert-counters">
<CodeBlock language="python">
{`with store.open_session() as session:
    result = list(session.query(object_type=User).where_less_than("Age", 30))
    users_ids = [session.advanced.get_document_id(user) for user in result]

with store.bulk_insert() as bulk_insert:
    for user_id in users_ids:
        # Choose document
        counters_for = bulk_insert.counters_for(user_id)

        # Add or Increment a counter
        bulk_insert.counters_for(user_id).increment("download", 100)
`}
</CodeBlock>
</TabItem>  





</LanguageContent>
<LanguageContent language="php">

<Admonition type="note" title="Note">

* This section describes the relationships between Counters and other RavenDB features:  
   * How Counters are supported by the different features.  
   * How Counters trigger features' execution.  

* In this page:  
  * [Counters and Indexing](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing)  
  * [Counters and Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries)  
  * [Counters and Revisions](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-revisions)  
  * [Counters and Changes API](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-changes-api)  
  * [Counters and Ongoing Tasks](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) - `Backup`, `External replication`, `ETL`
  * [Counters and Other Features: summary](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-other-features-summary)  
  * [Including Counters](../../document-extensions/counters/counters-and-other-features.mdx#including-counters)  
</Admonition>


### Counters and Indexing  

Indexing Counters can speed-up finding them and the documents that contain them.  

* **Indexing Counter Values**
    Dynamic indexes (aka auto-indexes) _cannot_ index counter values. To index counter values, 
    create a static index that inherits from `AbstractCountersIndexCreationTask` ([see here](../../document-extensions/counters/indexing.mdx)).

* **Indexing Counter Names**  
    Re-indexing due to Counter-name modification is normally rare enough to pause no performance issues.  
    To index a document's Counters by name, use [CounterNamesFor](../../document-extensions/counters/indexing.mdx#section-1).  
### Counters and Queries  

Send the server **raw queries** for execution.  

* You can query Counters **by name** but **not by value**.  
  This is because queries are generally [based on indexes](../../start/getting-started.mdx#example-iii---querying), and Counter values are [not indexed](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing).  
* Counter values **can** be [projected](../../indexes/querying/projections.mdx) from query results, as demonstrated in the following examples.  
  This way a client can get counter values from a query without downloading whole documents.  

* Use [RawQuery](../../client-api/session/querying/how-to-query.mdx#sessionadvancedrawquery) to send the server raw RQL expressions for execution.  
   * You can use the `counter` method.  
     **Returned Counter Value**: **Accumulated**

  * You can use the `counterRaw` method.  
     **Returned Counter Value**: **Distributed**  
     A Counter's value is returned as a series of values, each maintained by one of the nodes.  
      * It is not expected of you to use this in your application.  
        Applications normally use the Counter's overall value, and very rarely refer to the value each node gives it.  
      
        
    `counter` and `counterRaw` samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="counter" label="counter">
<CodeBlock language="php">
{`//Various RQL expressions sent to the server using counter()
//Returned Counter value is accumulated
$rawQuery1 = $session->advanced()
    ->rawQuery(CounterResult::class, "from products as p select counter(p, \\"ProductLikes\\")")
    ->toList();

$rawQuery2 = $session->advanced()
    ->rawQuery(CounterResult::class,"from products select counter(\\"ProductLikes\\") as ProductLikesCount")
    ->toList();

$rawQuery3 = $session->advanced()
    ->rawQuery(CounterResult::class,"from products where PricePerUnit > 50 select Name, counter(\\"ProductLikes\\")")
    ->toList();
`}
</CodeBlock>
</TabItem>
<TabItem value="counterRaw" label="counterRaw">
<CodeBlock language="php">
{`//An RQL expression sent to the server using counterRaw()
//Returned Counter value is distributed
$query = $session->advanced()
    ->rawQuery(CounterResultRaw::class, "from users as u select counterRaw(u, \\"downloads\\")")
    ->toList();
`}
</CodeBlock>
</TabItem>
    </Tabs>
### Counters and Revisions  

A document revision stores all the document Counters' names and values when the revision was created.  
 
* **Stored Counter Values**: **Accumulated**  
  A revision stores a Counter's value as a single sum, with no specification of the Counter's value on each node.  

* Revisions-creation can be initiated by **Counter-name modification**.  
   * When the Revisions feature is enabled, the creation or deletion of a Counter initiates the creation of a new document revision.  
   * Counter **value** modifications do **not** cause the creation of new revisions.  
### Counters and Changes API

[Changes API](../../client-api/changes/what-is-changes-api.mdx#changes-api) is a Push service, that can inform you of various changes on the Server, including [changes in Counter values](../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#changes-api--how-to-subscribe-to-counter-changes).  
You can target all Counters, or specify the ones you wish to follow.  

* **Pushed Counter Value**: **Accumulated**  
  `Changes API` methods return a Counter's value as a single sum, without specifying its value on each node.  
* The service is initiated by **Counter Value Modification**.  
### Counters and Ongoing Tasks:

Each [ongoing task](../../studio/database/tasks/ongoing-tasks/general-info.mdx) relates to Counters in its own way.  

* **Counters** and the **Backup task**  
    There are two [backup](../../studio/database/tasks/backup-task.mdx) types: **logical-backup** and **snapshot**.  
    Both types store and restore **all** data, including Counters.  
    Both types operate as an ongoing backup routine, with a pre-set time schedule.  
    * Logical Backup:  
      **Backed-up Counter values**: **Distributed**  
      A logical backup is a higher-level implementation of Smuggler.  
      As with Smuggler, Counters are backed-up and restored including their values on all nodes.  
    * Snapshot:  
      A snapshot stores all data and settings as a single binary image.
      All components, including Counters, are restored to the exact same state they've been at during backup.  

* **Counters** and the **External Replication task**  
    The ongoing [external replication](../../studio/database/tasks/ongoing-tasks/external-replication-task.mdx) task replicates all data, including Counters.  
    * **Replicated Counter Value**: **Distributed**  
        Counters are replicated along with their values on all nodes.  
    * Replication can be initiated by both **Counter-name update** _and_ **Counter-value modification**.  

* **Counters** and the **ETL task**  
    [ETL](../../server/ongoing-tasks/etl/basics.mdx) is used to export data from RavenDB to an external (either Raven or SQL) database.  
    * [SQL ETL](../../server/ongoing-tasks/etl/sql.mdx) is **not supported**.  
      Counters cannot be exported to an SQL database over SQL ETL.  
    * [RavenDB ETL](../../server/ongoing-tasks/etl/raven.mdx) **is supported**.  
      Counters [are](../../server/ongoing-tasks/etl/raven.mdx#counters) exported over RavenDB ETL.  
      * Export can be initiated by both **Counter-name update** _and_ **Counter-value modification**.  
      * **Exported Counter Value**: **Distributed**  
        Counters are exported along with their values on all nodes.  
      * Counters can be [exported using a script](../../server/ongoing-tasks/etl/raven.mdx#adding-counter-explicitly-in-a-script).  
        **Default behavior**: When an ETL script is not provided, Counters are exported.  
      
<Admonition type="note" title="Note">
### Counters and Other Features: Summary

Use this table to find if and how various RavenDB features are triggered by Counters, 
and how the various features handle Counter values.  

* In the **Triggered By** column:  
    * _Document Change_ - Feature is triggered by a Counter Name update.  
    * _Countrer Value Modification_ - Feature is triggered by a Counter Value modification.  
    * _Time Schedule_ - Feature is invoked by a pre-set time routine.  
    * _No Trigger_ - Feature is executed manually, through the Studio or by a Client.  
* In the **Counter Value** column:  
    * _Accumulated_ - Counter Value is handled as a single accumulated sum.  
    * _Distributed_ - Counter Value is handled as a series of values maintained by cluster nodes.  

| **Feature** | **Triggered by** | **Counter Value** |
|-------------|:-------------|:-------------|
| [Indexing](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing) | _Document Change_ | doesn't handle values |
| [LINQ Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries) | _No trigger_ | _Accumulated_ |
| [Raw Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries) | _No trigger_ | `counter()` - _Accumulated_ <br/> `counterRaw()` - _Distributed_ |
| [Backup Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Time Schedule_ | _Distributed_ |
| [RavenDB ETL Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_, <br/> _Countrer Value Modification_ | _Distributed_ |
| [External Replication task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_, <br/> _Countrer Value Modification_ | _Distributed_ |
| [Changes API](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-changes-api) | _Countrer Value Modification_ | _Accumulated_ |
| [Revision creation](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-revisions) | _Document Change_ | _Accumulated_ |

</Admonition>
### Including Counters  
You can [include](../../client-api/how-to/handle-document-relationships.mdx#includes) Counters while loading a document.  
An included Counter is retrieved in the same request as its owner-document and is held by the session, 
so it can be immediately retrieved when needed with no additional remote calls.


* **Including Counters when using [session.load](../../client-api/session/loading-entities.mdx#session--loading-entities)**:  
    * Include a single Counter using `include_counter`  
    * Include multiple Counters using `include_counters`  

    `include_counter` and `include_counters` usage samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="IncludeCounter" label="IncludeCounter">
<CodeBlock language="php">
{`//include single Counters
$productPage = $session->load(Product::class, "products/1-C", function($includeBuilder) {
    return $includeBuilder
            ->includeCounter("ProductLikes")
            ->includeCounter("ProductDislikes")
            ->includeCounter("ProductDownloads");
});
`}
</CodeBlock>
</TabItem>
<TabItem value="IncludeCounters" label="IncludeCounters">
<CodeBlock language="php">
{`//include multiple Counters
//note that you can combine the inclusion of Counters and documents.
$productPage = $session->load(Product::class, "products/1-C", function($includeBuilder) {
    return $includeBuilder
        ->includeDocuments("products/1-C")
        ->includeCounters(["ProductLikes", "ProductDislikes"]);
});
`}
</CodeBlock>
</TabItem>
    </Tabs>

* **Including Counters when using [Session.Query](../../client-api/session/querying/how-to-query.mdx#session--querying--how-to-query)**:  
    * Include a single Counter using `include_counter`.  
    * Include multiple Counters using `include_counters`.  

    `include_counter` and `include_counters` usage samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="IncludeCounter" label="IncludeCounter">
<CodeBlock language="php">
{`//include a single Counter
$query = $session->query(Product::class)
        ->include(function($includeBuilder) {
            return $includeBuilder->includeCounter("ProductLikes");
        });
`}
</CodeBlock>
</TabItem>
<TabItem value="IncludeCounters" label="IncludeCounters">
<CodeBlock language="php">
{`//include multiple Counters
$query = $session->query(Product::class)
        ->include(function($includeBuilder){
            return $includeBuilder->includeCounters(["ProductLikes", "ProductDownloads"]);
        });
`}
</CodeBlock>
</TabItem>
    </Tabs>




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* This section describes the relationships between Counters and other RavenDB features:  
   * How Counters are supported by the different features.  
   * How Counters trigger features' execution.  

* In this page:  
  * [Counters and Indexing](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing)  
  * [Counters and Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries)  
  * [Counters and Revisions](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-revisions)  
  * [Counters and Smuggler](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-smuggler)  
  * [Counters and Changes API](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-changes-api)  
  * [Counters and Ongoing Tasks](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) - `Backup`, `External replication`, `ETL`, `Data Subscription`  
  * [Counters and Other Features: summary](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-other-features-summary)  
  * [Including Counters](../../document-extensions/counters/counters-and-other-features.mdx#including-counters)  
  * [Counters Bulk-Insert](../../document-extensions/counters/counters-and-other-features.mdx#counters-bulk-insert)  
</Admonition>


### Counters and Indexing  

Indexing Counters can speed-up finding them and the documents that contain them.  

* **Indexing Counter Values**
    Dynamic indexes (aka auto-indexes) _cannot_ index counter values. To index counter values, 
    create a static index that inherits from `AbstractCountersIndexCreationTask` ([see here](../../document-extensions/counters/indexing.mdx)).

* **Indexing Counter Names**  
    Re-indexing due to Counter-name modification is normally rare enough to pause no performance issues.  
    To index a document's Counters by name, use [CounterNamesFor](../../document-extensions/counters/indexing.mdx#section-1).  
### Counters and Queries  

Create queries **using code**, or send the server **raw queries** for execution.  

* Either way, you can query Counters **by name** but **not by value**.  
  This is because queries are generally [based on indexes](../../start/getting-started.mdx#example-iii---querying), and Counter values are [not indexed](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing).  
* Counter values **can** be [projected](../../indexes/querying/projections.mdx) from query results, as demonstrated in the following examples.  
  This way a client can get Counter values from a query without downloading whole documents.  

* Use [Session.Query](../../client-api/session/querying/how-to-query.mdx#sessionquery) to code queries yourself.  
   * **Returned Counter Value**: **Accumulated**  
     A Counter's value is returned as a single sum, with no specification of the Counter's value on each node.
<TabItem value="counters_region_query" label="counters_region_query">
<CodeBlock language="js">
{`const session = store.openSession();
const query = session.query(\{collection: "Products"\})
    .selectFields("ProductLikes");
const queryResults = query.all();

for (let counterValue in queryResults) \{
    console.log("ProductLikes: " + counterValue);
\}
`}
</CodeBlock>
</TabItem>

* Use [RawQuery](../../client-api/session/querying/how-to-query.mdx#sessionadvancedrawquery) to send the server raw RQL expressions for execution.  
   * You can use the `counter` method.  
     **Returned Counter Value**: **Accumulated**

  * You can use the `counterRaw` method.  
     **Returned Counter Value**: **Distributed**  
     A Counter's value is returned as a series of values, each maintained by one of the nodes.  
      * It is not expected of you to use this in your application.  
        Applications normally use the Counter's overall value, and very rarely refer to the value each node gives it.  
      
        
    `counter` and `counterRaw` samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="counter" label="counter">
<CodeBlock language="js">
{`//Various RQL expressions sent to the server using counter()
//Returned Counter value is accumulated
const rawquery1 = session.advanced
    .rawQuery("from products as p select counter(p, \\"ProductLikes\\")")
    .all();

const rawquery2 = session.advanced
    .rawQuery("from products select counter(\\"ProductLikes\\") as ProductLikesCount")
    .all();

const rawquery3 = session.advanced
    .rawQuery("from products where PricePerUnit > 50 select Name, counter(\\"ProductLikes\\")")
    .all();
`}
</CodeBlock>
</TabItem>
<TabItem value="counterRaw" label="counterRaw">
<CodeBlock language="js">
{`//An RQL expression sent to the server using counterRaw()
//Returned Counter value is distributed
const query = session.advanced
    .rawQuery("from users as u select counterRaw(u, \\"downloads\\")")
    .all();
`}
</CodeBlock>
</TabItem>
    </Tabs>
### Counters and Revisions  

A [document revision](../../document-extensions/revisions/overview.mdx) stores all the document Counters' 
names and values when the revision was created.  
 
* **Stored Counter Values**: **Accumulated**  
  A revision stores a Counter's value as a single sum, with no specification of the Counter's value on each node.  

* Revisions-creation can be initiated by **Counter-name modification**.  
   * When the Revisions feature is enabled, the creation or deletion of a Counter initiates the creation of a new document revision.  
   * Counter **value** modifications do **not** cause the creation of new revisions.  
### Counters and Smuggler  

[Smuggler](../../client-api/smuggler/what-is-smuggler.mdx) is a DocumentStore property, that can be used 
to [export](../../client-api/smuggler/what-is-smuggler.mdx#databasesmugglerexportoptions) chosen 
database items to an external file or to [import](../../client-api/smuggler/what-is-smuggler.mdx#databasesmugglerimportoptions) 
database items from an existing file into the database.  

* **Transferred Counter Value**: **Distributed**  
  Smuggler transfers the entire series of values that the different nodes maintain for a Counter.  
* To make Smuggler handle Counters, use `DatabaseItemType` entities to import or export.  

`DatabaseItemType` options:  
* `None`  
* `Documents`  
* `RevisionDocuments`  
* `Indexes`  
* `Identities`  
* `Tombstones`  
* `LegacyAttachments`  
* `Conflicts`  
* `CompareExchange`  
* `LegacyDocumentDeletions`  
* `LegacyAttachmentDeletions`  
* `DatabaseRecord`  
* `Unknown`  
* `Attachments`  
* `CounterGroups`  
* `Subscriptions`  
* `CompareExchangeTombstones`  
* `TimeSeries`  
### Counters and Changes API

[Changes API](../../client-api/changes/what-is-changes-api.mdx#changes-api) is a Push service, that can inform you of various changes on the Server, including [changes in Counter values](../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#changes-api--how-to-subscribe-to-counter-changes).  
You can target all Counters, or specify the ones you wish to follow.  

* **Pushed Counter Value**: **Accumulated**  
  `Changes API` methods return a Counter's value as a single sum, without specifying its value on each node.  
* The service is initiated by **Counter Value Modification**.  
### Counters and Ongoing Tasks:

Each [ongoing task](../../studio/database/tasks/ongoing-tasks/general-info.mdx) relates to Counters in its own way.  

* **Counters** and the **Backup task**  
    There are two [backup](../../studio/database/tasks/backup-task.mdx) types: **logical-backup** and **snapshot**.  
    Both types store and restore **all** data, including Counters.  
    Both types operate as an ongoing backup routine, with a pre-set time schedule.  
    * Logical Backup:  
      **Backed-up Counter values**: **Distributed**  
      A logical backup is a higher-level implementation of [Smuggler](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-smuggler).  
      As with Smuggler, Counters are backed-up and restored including their values on all nodes.  
    * Snapshot:  
      A snapshot stores all data and settings as a single binary image.
      All components, including Counters, are restored to the exact same state they've been at during backup.  

* **Counters** and the **External Replication task**  
    The ongoing [external replication](../../studio/database/tasks/ongoing-tasks/external-replication-task.mdx) task replicates all data, including Counters.  
    * **Replicated Counter Value**: **Distributed**  
        Counters are replicated along with their values on all nodes.  
    * Replication can be initiated by both **Counter-name update** _and_ **Counter-value modification**.  

* **Counters** and the **ETL task**  
    [ETL](../../server/ongoing-tasks/etl/basics.mdx) is used to export data from RavenDB to an external (either Raven or SQL) database.  
    * [SQL ETL](../../server/ongoing-tasks/etl/sql.mdx) is **not supported**.  
      Counters cannot be exported to an SQL database over SQL ETL.  
    * [RavenDB ETL](../../server/ongoing-tasks/etl/raven.mdx) **is supported**.  
      Counters [are](../../server/ongoing-tasks/etl/raven.mdx#counters) exported over RavenDB ETL.  
      * Export can be initiated by both **Counter-name update** _and_ **Counter-value modification**.  
      * **Exported Counter Value**: **Distributed**  
        Counters are exported along with their values on all nodes.  
      * Counters can be [exported using a script](../../server/ongoing-tasks/etl/raven.mdx#adding-counter-explicitly-in-a-script).  
        **Default behavior**: When an ETL script is not provided, Counters are exported.  
      
* **Counters** and the **[Data Subscriptions](../../client-api/data-subscriptions/what-are-data-subscriptions.mdx#data-subscriptions) task**  
    Data Subscriptions can be initiated by document changes, including those caused by **Counter Name updates**.  
    Documents will **not** be delivered in reaction to Counter Value modification.  


<Admonition type="note" title="Note">
### Counters and Other Features: Summary

Use this table to find if and how various RavenDB features are triggered by Counters, 
and how the various features handle Counter values.  

* In the **Triggered By** column:  
    * _Document Change_ - Feature is triggered by a Counter Name update.  
    * _Countrer Value Modification_ - Feature is triggered by a Counter Value modification.  
    * _Time Schedule_ - Feature is invoked by a pre-set time routine.  
    * _No Trigger_ - Feature is executed manually, through the Studio or by a Client.  
* In the **Counter Value** column:  
    * _Accumulated_ - Counter Value is handled as a single accumulated sum.  
    * _Distributed_ - Counter Value is handled as a series of values maintained by cluster nodes.  

| **Feature** | **Triggered by** | **Counter Value** |
|-------------|:-------------|:-------------|
| [Indexing](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-indexing) | _Document Change_ | doesn't handle values |
| [LINQ Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries) | _No trigger_ | _Accumulated_ |
| [Raw Queries](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-queries) | _No trigger_ | `counter()` - _Accumulated_ <br/> `counterRaw()` - _Distributed_ |
| [Smuggler](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-smuggler) | _No trigger_ | _Distributed_ |
| [Backup Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Time Schedule_ | _Distributed_ |
| [RavenDB ETL Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_, <br/> _Countrer Value Modification_ | _Distributed_ |
| [External Replication task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_, <br/> _Countrer Value Modification_ | _Distributed_ |
| [Data Subscriptions Update Task](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-ongoing-tasks) | _Document Change_ | |
| [Changes API](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-changes-api) | _Countrer Value Modification_ | _Accumulated_ |
| [Revision creation](../../document-extensions/counters/counters-and-other-features.mdx#counters-and-revisions) | _Document Change_ | _Accumulated_ |

</Admonition>
### Including Counters  
You can [include](../../client-api/how-to/handle-document-relationships.mdx#includes) Counters while loading a document.  
An included Counter is retrieved in the same request as its owner-document and is held by the session, 
so it can be immediately retrieved when needed with no additional remote calls.


* **Including Counters when using [Session.Load](../../client-api/session/loading-entities.mdx#session--loading-entities)**:  
    * Include a single Counter using `IncludeCounter`.  
    * Include multiple Counters using `IncludeCounters`.  

    `IncludeCounter` and `IncludeCounters` usage samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="IncludeCounter" label="IncludeCounter">
<CodeBlock language="js">
{`const productPage = await session.load("orders/1-A", {
    includes: includeBuilder => includeBuilder
        .includeDocuments("products/1-C")
        .includeCounters(["ProductLikes", "ProductDislikes"])
});
`}
</CodeBlock>
</TabItem>
<TabItem value="IncludeCounters" label="IncludeCounters">
<CodeBlock language="js">
{`const productPage = await session.load("orders/1-A", {
        documentType: Product,
        includes: includeBuilder =>
            includeBuilder.includeDocuments("products/1-C")
                .includeCounters(["ProductLikes", "ProductDislikes"])
    }
);
`}
</CodeBlock>
</TabItem>
    </Tabs>

* **Including Counters when using [Session.Query](../../client-api/session/querying/how-to-query.mdx#sessionquery)**:  
    * Include a single Counter using `IncludeCounter`.  
    * Include multiple Counters using `IncludeCounters`.  

    `IncludeCounter` and `IncludeCounters` usage samples:  
<Tabs groupId='languageSyntax'>
<TabItem value="IncludeCounter" label="IncludeCounter">
<CodeBlock language="js">
{`const query = session.query({collection: "Product"})
    .include(includeBuilder =>
        includeBuilder.includeCounter("ProductLikes"));
`}
</CodeBlock>
</TabItem>
<TabItem value="IncludeCounters" label="IncludeCounters">
<CodeBlock language="js">
{`const query = session.query({collection: "Product"})
    .include(includeBuilder =>
        includeBuilder.includeCounters("ProductLikes", "ProductDownloads"));
`}
</CodeBlock>
</TabItem>
    </Tabs>
### Counters Bulk-Insert  
`store.BulkInsert` is RavenDB's high-performance data insertion operation.  
Use its `CountersFor` interface's `Increment` method to add or update counters with great speed.  

* Usage  

   * `countersFor`
<TabItem value="CountersFor-definition" label="CountersFor-definition">
<CodeBlock language="js">
{`const counter = session.countersFor("documentid")
`}
</CodeBlock>
</TabItem>

        | Parameters | Type | Description |
        |:-------------|:-------------|:-------------|
        | `id` | `string` | Document ID |

   *   `increment`
<TabItem value="Increment-definition" label="Increment-definition">
<CodeBlock language="js">
{`const incerment = store.openSession();
session.countersFor("documentid").increment("likes", 100);
//
`}
</CodeBlock>
</TabItem>

           | Parameters | Type | Description |
           |:-------------|:-------------|:-------------|
           | `name` | `string` | Counter Name |
           | `delta` | `long` | Default: 1L |

* Usage Flow  

   * Create a `store.BulkInsert` instance.  
   * Pass the instance's `CountersFor` interface, the document ID  
   * Call `Increment` as many times as you like. Pass it -  
     The Counter Name and Value (delta to be added).

* Usage Sample  
  In this sample, we attach a counter to all User documents.
<TabItem value="bulk-insert-counters" label="bulk-insert-counters">
<CodeBlock language="js">
{`const query = session.query(\{collection: "User"\})
    .whereBetween("Age", 0, 30)
const result = query.all();

const bulkInsert = store.bulkInsert();
for (let user = 0; user < result.length; user++) \{
    let userId = result[user].id;

    // Choose document
    let countersFor = bulkInsert.countersFor(userId);

    // Add or Increment a counter
    await bulkInsert.countersFor(userId).increment("downloaded", 100);
\}
`}
</CodeBlock>
</TabItem>  





</LanguageContent>

<!---
### Studio Articles
- [Studio Counters Management](../../studio/database/document-extensions/counters#counters)

### Client-API - Session Articles
- [Counters Overview](../../document-extensions/counters/overview)
- [Creating and Modifying Counters](../../document-extensions/counters/create-or-modify)
- [Deleting a Counter](../../document-extensions/counters/delete)
- [Retrieving Counter Values](../../document-extensions/counters/retrieve-counter-values)
- [Counters In Clusters](../../document-extensions/counters/counters-in-clusters)

### Client-API - Operations Articles
- [Counters Operations](../../client-api/operations/counters/get-counters#operations--counters--how-to-get-counters)


-->